# bsplines

./: .gitignore  CMakeLists.txt  README.md
inc/bspline/: bisect.h  bspline.h  bspline_class.h  eigen.h  splines.h
math/: doc.lyx  test_notes.lyx
src/: splines.cpp
tests/: CMakeLists.txt  test_bspline.cpp
